--- a/index.html
+++ b/index.html
@@ -1,43 +1,73 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <title>Example</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- Do not add `link` tags-->
-      <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<head>
+  <title>Example</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- Do not add `script` tags-->
-      <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
-      <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
-    </head>
-    <body>
-      <h1>Proj 2 app</h1>
+  <!-- Do not add `link` tags-->
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
-    <div class="container">
-      <form id="sign-in-form">
-      <legend> log in </legend>
-      <input required placeholder="Enter Email" name="credentials[email]" type="email"/>
-      <input required placeholder="Enter Password" name="credentials[password]" type="password"/>
-      <input type="submit" />
-      </form>
+  <!-- Do not add `script` tags-->
+  <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
+  <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
+</head>
 
-      <form id="Change-password-form" class='hidden'>
-        <legend> Change Password </legend>
-        <input required placeholder="Old Password" name="passwords[old]" type="password"/>
-        <input required placeholder="New Password" name="passwords[new]" type="password"/>
-        <input type="submit" />
-      </form>
+<body class="container-fluid">
+  <h1>Proj 2 app</h1>
 
-      <form id="sign-up-form">
-      <legend> sign up </legend>
-      <input required placeholder="Enter Email" name="credentials[email]" type="email"/>
-      <input required placeholder="Enter Password" name="credentials[password]" type="password"/>
-      <input required placeholder="Confirm Password" name="credentials[password_confirmation]" type="password"/>
+  <h5 id="display-message"></h5>
+
+  <div class="ingredient">
+    <form id="create-ingredient">
+    <div class="container-createIngredient">
+      <label for="IngredientName">Ingredient</label>
+      <!-- enter ingredient name -->
+      <input type="text" class="form-control" id="IngredientName" placeholder="ingredient or item name">
+    </div>
+
+    <div class="container-unitType">
+      <!-- select ingredient unit type and amount -->
+      <label for="unitType">Unit type</label>
+      <select class="form-control" id="unitType">
+        <option>tbs</option>
+        <option>tsp</option>
+        <option>lb</option>
+        <option>whole</option>
+      </select>
+    </div>
+
       <input type="submit" />
     </form>
   </div>
 
 
-    </body>
+
+  <div class="container-auth">
+    <form id="sign-in-form">
+      <legend> log in </legend>
+      <input required placeholder="Enter Email" name="credentials[email]" type="email" />
+      <input required placeholder="Enter Password" name="credentials[password]" type="password" />
+      <input type="submit" />
+    </form>
+
+    <form id="Change-password-form" class='hidden'>
+      <legend> Change Password </legend>
+      <input required placeholder="Old Password" name="passwords[old]" type="password" />
+      <input required placeholder="New Password" name="passwords[new]" type="password" />
+      <input type="submit" />
+    </form>
+
+    <form id="sign-up-form">
+      <legend> sign up </legend>
+      <input required placeholder="Enter Email" name="credentials[email]" type="email" />
+      <input required placeholder="Enter Password" name="credentials[password]" type="password" />
+      <input required placeholder="Confirm Password" name="credentials[password_confirmation]" type="password" />
+      <input type="submit" />
+    </form>
+  </div>
+  <div id="content" class="content"></div>
+
+</body>
+
 </html>
