crud for ingredient complete

--- a/index.html
+++ b/index.html
@@ -34,7 +34,16 @@
           <button type="submit">Submit</button>
         </div>
       </form>
+      <form id="delete-fridgeItem-form">
+        <h5> delete fridge item </h5>
+        <div class="container-deletefridge">
+          <label for="deleteFridgeID">Ingredient ID</label>
+          <input name="fridge" type="text" id="fridgeID" class="form-control" placeholder="fridge ID">
+          <button type="submit">Submit</button>
+        </div>
+      </form>
     </div>
+
 
     <div class="ingredient hidden">
       <form id="create-ingredient-form">
