after atom fails to open project

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
   <div id="content" class="content"></div>
   <main>
 
-    <div class="fridge hidden">
+  <div class="container">
+    <div class="fridge">
+      <div class="col col-lg-2">
+      </div>
       <form id="create-fridgeItem-form">
         <h5>  insert in fridge </h5>
         <div class="container-createFridge">
@@ -42,8 +45,10 @@
           <button type="submit">Submit</button>
         </div>
       </form>
+      <div class="col col-lg-2">
+      </div>
     </div>
-
+  </div>
 
     <div class="ingredient hidden">
       <form id="create-ingredient-form">
